# quoteassist

./: .env.example  .gitignore  .tool-versions  CLAUDE.md  Jenkinsfile  Makefile  PLATFORM_RELEASE_PLAN.md  README.md  docker-compose.override.yml  docker-compose.yml
.claude/: settings.json
.claude/hooks/: elixir_check.sh
.github/workflows/: ai-service.yml  infra-plan.yml  outlook-plugin.yml  platform.yml
designs/: .thumbnail  README.md  SKILL.md  colors_and_type.css  dashboard.html  error-401.html  error-404.html  forgot.html  qa-shell.js  qa-team.js  qa.css  quote-detail.html  register.html  team.html
designs/preview/: _card.css  brand-iconography.html  brand-logo.html  colors-brand.html  colors-genre.html  colors-neutrals.html  colors-semantic.html  comp-avatar.html  (+20 more)
docs/: PHASE_PROGRESS.md  PLATFORM_RELEASE_PLAN.md  QuoteAssist-Unified-Requirements-and-Solution-Design-v1.docx  QuoteAssist-Unified-Requirements-and-Solution-Design-v1.md  server-setup-guide.md
infrastructure/: README.md
projects/ai-service/: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
projects/ai-service/app/: __init__.py  main.py
projects/ai-service/app/api/routes/: __init__.py  classify.py  embed.py  extract.py
projects/ai-service/app/confidence/: __init__.py  calculator.py
projects/ai-service/app/core/: __init__.py  config.py
projects/ai-service/app/models/: __init__.py  base.py  claude.py  router.py
projects/ai-service/app/prompts/: __init__.py
projects/ai-service/app/rag/: __init__.py
projects/ai-service/app/schemas/: __init__.py  extraction.py
(+394 files in other folders)
